--- a/packages/template-advanced/pyproject.toml
+++ b/packages/template-advanced/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "fastapi==0.121.2",
-  "uvicorn==0.38.0",
+  "uvicorn[standard]==0.38.0",
   "python-dotenv==1.2.1",
   "pydantic-settings==2.12.0",
   "sqlalchemy==2.0.45",
