--- a/packages/template-llama/pyproject.toml
+++ b/packages/template-llama/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "fastapi==0.121.2",
-  "uvicorn==0.38.0",
+  "uvicorn[standard]==0.38.0",
   "llama-cpp-python==0.3.16",
   "pydantic-settings==2.12.0",
 ]
