--- a/packages/template-nlp/pyproject.toml
+++ b/packages/template-nlp/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "fastapi==0.121.2",
-  "uvicorn==0.38.0",
+  "uvicorn[standard]==0.38.0",
   "transformers[torch]==4.57.3",
   "sentence-transformers==5.1.2",
   "pydantic-settings==2.12.0",
