--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,6 +85,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Test llama template
+        if: matrix.os == 'macos-latest'
         uses: ./.github/actions/test-template
         with:
           template: llama
