--- a/packages/template-llama/pyproject.toml
+++ b/packages/template-llama/pyproject.toml
@@ -28,3 +28,7 @@ line-length = 120
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
+
+[tool.pytest.ini_options]
+timeout = 120
+timeout_func_only = true
